--- a/SendEmailsWithAspDotNetCore/Pages/Shared/_Layout.cshtml
+++ b/SendEmailsWithAspDotNetCore/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/MailRequest">MailRequest</a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/WelcomeRequest">WelcomeRequest</a>
+                        </li>
                     </ul>
                 </div>
             </div>
